tests/NormalTests/paczka1/small_fuzzy/18096731.err
Error in line 7: S524 S612 35,34
Error in line 1: WctslGIv S737 78,3
Error in line 13: WctslGIv S612 7,82
